# LocalLens

./: .gitignore  README.md  app.py  build_db.py  device.py  find_duplicates.py  index_store.py  model_utils.py  pyproject.toml  requirements.txt  run_find_duplicates.bat  start-webui.bat
docs/: HARDWARE_REQUIREMENTS.md
